--- a/view.html
+++ b/view.html
@@ -115,7 +115,7 @@ body{
 <span class="suit red br">♥</span>
 </div>
 <div class="face back">
-<img src="adalah pokoknya di album gue ini foto">
+<img src="assets/papilo.jpg">
 </div>
 </div>
 </div>
@@ -130,7 +130,7 @@ body{
 <span class="suit black br">♠</span>
 </div>
 <div class="face back">
-<img src="adalah pokoknya di album gue ini foto">
+<img src="assets/papilo 2.jpeg">
 </div>
 </div>
 </div>
@@ -145,7 +145,7 @@ body{
 <span class="suit red br">♦</span>
 </div>
 <div class="face back">
-<img src="adalah pokoknya di album gue ini foto">
+<img src="assets/papilo 3.jpg">
 </div>
 </div>
 </div>
@@ -160,7 +160,7 @@ body{
 <span class="suit black br">♣</span>
 </div>
 <div class="face back">
-<img src="adalah pokoknya di album gue ini foto">
+<img src="assets/papilo 4.jpg">
 </div>
 </div>
 </div>
